@@ -860,4 +860,7 @@ UPDATE gibbonRole SET nameShort='Tcr' WHERE name='Teacher';end
 UPDATE gibbonRole SET nameShort='Prt' WHERE name='Parent';end
 UPDATE gibbonRole SET nameShort='SSt' WHERE name='Support Staff';end
 UPDATE gibbonAction SET entryURL='staff_view.php' WHERE entryURL='staff_view' AND gibbonModuleID=(SELECT gibbonModuleID FROM gibbonModule WHERE name='Staff');end
+INSERT INTO `gibbonSetting` (`scope` ,`name` ,`nameDisplay` ,`description` ,`value`)VALUES ('Planner', 'parentWeeklyEmailSummaryIncludeMarkbook', 'Parent Weekly Email Summary Include Markbook', 'Should Markbook information be included in the weekly planner email summary that goes out to parents?', 'N');end
+ALTER TABLE `gibbonMarkbookColumn` ADD INDEX(`completeDate`);end
+ALTER TABLE `gibbonMarkbookColumn` ADD INDEX(`complete`);end
 ";
